Trying fixed header on mobile

--- a/content/css/partials/_mobile.scss
+++ b/content/css/partials/_mobile.scss
@@ -16,7 +16,7 @@ $less-outer-margin: 34px;
   } 
 
   header {
-    position: static;
+//    position: static;
   }
 
   nav {
